--- a/index.html
+++ b/index.html
@@ -43,63 +43,62 @@
 			<div id="hawaii" class="jumbotron text-center">
 
 			<nav class="navbar navbar-static-top">
-					      <div id="nav-container" class="container">
-					        <div class="navbar-header">
-					          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					            <span class="sr-only">Toggle navigation</span>
-					            <span class="icon-bar"></span>
-					            <span class="icon-bar"></span>
-					            <span class="icon-bar"></span>
-					          </button>
-					        </div>
+				<div id="nav-container" class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					    	<span class="sr-only">Toggle navigation</span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					    </button>
+					</div>
 
-					        <div id="navbar" class="navbar-collapse collapse">
-					          <ul class="nav navbar-nav navbar-right">
-					          	<img id="fighton" class="nav-fighton" src="img/usc.png">
+					<div id="navbar" class="navbar-collapse collapse">
+						<ul class="nav navbar-nav navbar-right">
+					        <img id="fighton" class="nav-fighton" src="img/usc.png">
 					            <li><a class="nav-items" href="#about">BIO</a></li>
 					            <li><a class="nav-items" href="#organizations">INVOLVEMENTS</a></li>
 					            <li><a class="nav-items" href="#projects">PROJECTS</a></li>
 					            <li><a id="contact-style" class="nav-items" href="#contact">CONTACT</a></li>
-					          </ul>
-					        </div><!--/.nav-collapse -->
-					      </div>
+					    </ul>
+					</div>
+				</div>
 			</nav>
 
-					<div class="landing-text">
-						<div class="container text-center">
-							    <h1>ocean ronquillo-morgan</h1>
-								<h3>entrepreneur, developer, trojan.</h3>
+				<div class="landing-text">
+					<div class="container text-center">
+						<h1>ocean</h1>
+						<h1>ronquillo-</h1>
+						<h1>morgan</h1>
+						<h3>entrepreneur, developer, trojan.</h3>
 
-								<ul class="social-icons list-unstyled list-inline"> 
-									<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li><li><a href="https://github.com/OceanRonquilloMorgan/" target="_blank" class="icon"><i class="fa fa-github-square" style="font-size:36px"></i></a></li><li><a href="https://www.facebook.com/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-facebook-square" style="font-size:36px"></i></a></li><li><a href='mailto:oronquil@usc.edu' class="icon"><i class="fa fa-wpforms" style="font-size:36px"></i></a></li></ul>
-						</div>
+						<ul class="social-icons list-unstyled list-inline"> 
+							<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li><li><a href="https://github.com/OceanRonquilloMorgan/" target="_blank" class="icon"><i class="fa fa-github-square" style="font-size:36px"></i></a></li><li><a href="https://www.facebook.com/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-facebook-square" style="font-size:36px"></i></a></li><li><a href='mailto:oronquil@usc.edu' class="icon"><i class="fa fa-wpforms" style="font-size:36px"></i></a></li></ul>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
 			
-		<div id="about" class="container text-center">
-			<div class="row">
-				<div class="myinfo col-lg-8 col-md-6 col-sm-6">
-					<div class="col-lg-8 col-md-6 col-sm-6">
-					<h1>Aloha!</h1>
-						<p>Ocean Ronquillo-Morgan is the name.</p>
-						<p>Born in Honolulu, Hawaii, I was raised on an island for most of my life. I moved to Charleston, South Carolina for a few years. Now, I live in sunny Los Angeles, California.</p>
-						<p>I currently attend the University of Southern California (2020) as a Computer Science and Business Administration major.</p>
-						<p>Please feel free to talk or message me with any inquiries or opportunities at oronquil@usc.edu!</p>
-						</div>
-					<h1>Skills</h1>
-						<p><b>Languages:</b> Java, Python, HTML/CSS, Javascript</p>
-						<p><b>Frameworks:</b> Bootstrap, ReactJS</p>
-						<p><b>Applications:</b> Xcode</p>
-						<p><b>Business-Related:</b> Search Engine Optimization, Google Analytics</p>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6">
-						<img id="me-img" class="img-responsive" src="img/dinnerme.png">
+			<div id="about" class="container text-center">
+				<div class="row">
+					<div class="myinfo col-lg-8 col-md-6 col-sm-6">
+						<div class="col-lg-8 col-md-6 col-sm-6">
+						<h1>Aloha!</h1>
+							<p>Ocean Ronquillo-Morgan is the name.</p>
+							<p>Born in Honolulu, Hawaii, I was raised on an island for most of my life. I moved to Charleston, South Carolina for a few years. Now, I live in sunny Los Angeles, California.</p>
+							<p>I currently attend the University of Southern California (2020) as a Computer Science and Business Administration major.</p>
+							<p>Please feel free to talk or message me with any inquiries or opportunities at oronquil@usc.edu!</p>
+							</div>
+						<h1>Skills</h1>
+							<p><b>Languages:</b> Java, Python, HTML/CSS, Javascript</p>
+							<p><b>Frameworks:</b> Bootstrap, ReactJS</p>
+							<p><b>Applications:</b> Xcode</p>
+							<p><b>Business-Related:</b> Search Engine Optimization, Google Analytics</p>
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-6">
+							<img id="me-img" class="img-responsive" src="img/dinnerme.png">
+					</div>
 				</div>
 			</div>
-		</div>
 
 			<div id="waves" class="jumbotron text-center">
 				<div id="background-box">
@@ -208,7 +207,7 @@
 								</a>
 							</li>
 						</ul>
-		      </footer>
+		      	</footer>
 		    </div>
 
 			</div>
