--- a/index.html
+++ b/index.html
@@ -112,34 +112,34 @@
 					<div class ="row outer-organizations">
 						<div class="border col-lg-6">
 							<img class="club-images" src="img/tfla.jpg">
-							<h3 class="text-uppercase"><b>teach for los angeles</b></h3>
+							<h3 class="text-uppercase"><b><a style="color:#333333;" href="teachforla.wixsite.com/teachforlausc" target="_blank">teach for los angeles</a></b></h3>
 							<h4>tutor</h4>
-							<p>I serve as a writing and reading tutor for underserved students within the Los Angeles County school district, the nation’s second largest school district, which serves almost 700,000 students and the most diverse student populations.</p>
+							<p>I served as a writing and reading tutor for underserved students within the Los Angeles County school district, the nation’s second largest school district, which serves almost 700,000 students and the most diverse student populations.</p>
 						</div>
 						<div class="border col-lg-6">
 							<img class="club-images" src="img/jep.jpg">
-							<h3 class="text-uppercase"><b>joint educational project</b></h3>
-							<h4>tutor</h4>
-							<p>JEP provides USC students with real world experience related to their coursework, while simultaneously supporting local community service organizations. </p>
+							<h3 class="text-uppercase"><b><a style="color:#333333;" href="dornsife.usc.edu/joint-educational-project" target="_blank">joint educational project</a></b></h3>
+							<h4>instructor</h4>
+							<p>I developed a comprehensive classroom curriculum with a group of two others and formed close-knit bonds with kindergarten students at a local elementary school to foster mindfulness and yoga practices to cultivate positivity, self-love, and healthy habits for their futures.</p>
 						</div>
 					</div>
 					<h2>computer science</h2>
 					<div class="row outer-organizations">
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<img class="club-images" src="img/scope.jpeg">
-							<h3 class="text-uppercase"><b>scope usc</b></h3>
+							<h3 class="text-uppercase"><b><a style="color:#333333;" href="scopeusc.com" target="_blank">scope usc</a></b></h3>
 							<h4>student developer</h4>
-							<p>Scope guides a select number of students to improve their coding skills, build exciting projects, and bolster resumes through excellent curriculum, networking opportunities & more. In the spring semester of 2017, we learned React.js and built a variety of projects using this Javascript framework in small development teams.</p>
+							<p>Scope guides a select number of students to improve their coding skills, build exciting projects, and bolster resumes through excellent curriculum, networking opportunities and more. In the spring semester of 2017, we learned React.js and built a variety of projects using this Javascript framework in small development teams.</p>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<img class="club-images" src="img/acm.jpg" height="175">
-							<h3 class="text-uppercase"><b>acm usc</b></h3>
+							<h3 class="text-uppercase"><b><a style="color:#333333;" href="uscacm.org" target="_blank">acm usc</b></h3>
 							<h4>member</h4>
 							<p>USC's premier computer science organization, dedicated to bringing industry networking, hackathons, workshops, mentorship, and a community.</p>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<img class="club-images" src="img/swe.png">
-							<h3 class="text-uppercase"><b>society of women engineers</b></h3>
+							<h3 class="text-uppercase"><b><a style="color:#333333;" href="sweusc.com" target="_blank">society of women engineers</a></b></h3>
 							<h4>member</h4>
 							<p>USC's chapter aims to provide female engineers with a supportive community and a greater voice in the engineering industry.</p>
 						</div>
