updated description added og:description

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	    <meta charset='utf-8'>
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <meta name="description" content="Ocean Ronquillo-Morgan"/>
+	    <meta name="description" content="Ocean Ronquillo-Morgan. Entrepreneur, Developer, Trojan. USC Computer Science / Business Administration 2020."/>
 	    <meta name="keyword" content= "Ocean Ronquillo-Morgan, Ronquillo-Morgan, Ocean, HTML, CSS, Java, Python, Bootstrap, Web Development"/>
 	    <meta property='og:title' content="Ocean Ronquillo-Morgan. USC Computer Science / Business Administration 2020.">
+	    <meta property="og:description" content="Entrepreneur, Developer, Trojan. USC Computer Science / Business Administration 2020."/>
 	    <meta property='og:url' content="http://oceanronquillomorgan.com">
 
 	    <!-- Website Icon -->
