fixed acm club link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<img class="club-images" src="img/acm.jpg" height="175">
-							<h3 class="text-uppercase"><b><a style="color:#333333;" href="http://uscacm.org" target="_blank">acm usc</b></h3>
+							<h3 class="text-uppercase"><b><a style="color:#333333;" href="http://uscacm.org" target="_blank">acm usc</a></b></h3>
 							<h4>member</h4>
 							<p>USC's premier computer science organization, dedicated to bringing industry networking, hackathons, workshops, mentorship, and a community.</p>
 						</div>
