added contact.html and contact.css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					            <li><a class="nav-items" href="#about">BIO</a></li>
 					            <li><a class="nav-items" href="#organizations">INVOLVEMENTS</a></li>
 					            <li><a class="nav-items" href="#projects">PROJECTS</a></li>
-					            <li><a id="contact-style" class="nav-items" href="#contact">CONTACT</a></li>
+					            <li><a id="contact-style" class="nav-items" href="contact.html#contact">CONTACT</a></li>
 					    </ul>
 					</div>
 				</div>
@@ -159,22 +159,6 @@
 					<h2>Projects</h2>
 					<br><h2>COMING SOON...</h2></br>
 				</div>
-			</div>
-
-
-			<div id="sunset" class="jumbotron text-center">
-				<div id="background-box">
-					<h1><b>contact</b></h1>
-				</div>
-			</div>
-
-			<div id="contact">
-				<div class="container text-center">
-					<h2>contact form</h2>
-					<script type="text/javascript" src="https://form.jotform.us/jsform/71403877184158"></script>
-					</div>
-				</div>
-
 			</div>
 
 			<div class="text-center footer">
