fixed landing text h3 spacing

--- a/contact.html
+++ b/contact.html
@@ -44,44 +44,44 @@
 			<div id="hawaii" class="jumbotron text-center">
 
 			<nav class="navbar navbar-static-top">
-					<div id="nav-container" class="container">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						    	<span class="sr-only">Toggle navigation</span>
-						        <span class="icon-bar"></span>
-						        <span class="icon-bar"></span>
-						        <span class="icon-bar"></span>
-						    </button>
-						</div>
-
-						<div id="navbar" class="navbar-collapse collapse">
-							<ul class="nav navbar-nav navbar-right">
-						        <img id="fighton" class="nav-fighton" src="img/usc.png">
-						            <li><a class="nav-items" href="index.html#about">BIO</a></li>
-						            <li><a class="nav-items" href="index.html#organizations">INVOLVEMENTS</a></li>
-						            <li><a class="nav-items" href="index.html#projects">PROJECTS</a></li>
-						            <li><a id="contact-style" class="nav-items" href="contact.html#contact">CONTACT</a></li>
-						    </ul>
-						</div>
+				<div id="nav-container" class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					    	<span class="sr-only">Toggle navigation</span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					    </button>
 					</div>
+
+					<div id="navbar" class="navbar-collapse collapse">
+						<ul class="nav navbar-nav navbar-right">
+					        <img id="fighton" class="nav-fighton" src="img/usc.png">
+					            <li><a class="nav-items" href="#about">BIO</a></li>
+					            <li><a class="nav-items" href="#organizations">INVOLVEMENTS</a></li>
+					            <li><a class="nav-items" href="#projects">PROJECTS</a></li>
+					            <li><a id="contact-style" class="nav-items" href="contact.html#contact">CONTACT</a></li>
+					    </ul>
+					</div>
+				</div>
 			</nav>
 
-			<div class="landing-text">
-						<div class="container text-center">
-							<h1>ocean</h1>
-							<h1>ronquillo-</h1>
-							<h1>morgan</h1>
-							<h3>entrepreneur, developer, trojan.</h3>
+				<div class="landing-text">
+					<div class="container text-center">
+						<h1>ocean</h1>
+						<h1>ronquillo-</h1>
+						<h1>morgan</h1>
+						<h3>entrepreneur, developer, trojan.</h3>
 
-							<ul class="social-icons list-unstyled list-inline"> 
-								<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li><li><a href="https://github.com/OceanRonquilloMorgan/" target="_blank" class="icon"><i class="fa fa-github-square" style="font-size:36px"></i></a></li><li><a href="https://www.facebook.com/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-facebook-square" style="font-size:36px"></i></a></li><li><a href='mailto:oronquil@usc.edu' class="icon"><i class="fa fa-wpforms" style="font-size:36px"></i></a></li></ul>
-						</div>
+						<ul class="social-icons list-unstyled list-inline"> 
+							<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li><li><a href="https://github.com/OceanRonquilloMorgan/" target="_blank" class="icon"><i class="fa fa-github-square" style="font-size:36px"></i></a></li><li><a href="https://www.facebook.com/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-facebook-square" style="font-size:36px"></i></a></li><li><a href='mailto:oronquil@usc.edu' class="icon"><i class="fa fa-wpforms" style="font-size:36px"></i></a></li></ul>
+					</div>
+				</div>
 			</div>
-		</div>
 
 			<div id="contact" class="container text-center">
-					<h2>contact form</h2>
-						<script type="text/javascript" src="https://form.jotform.us/jsform/71403877184158"></script>
+				<h2>contact form</h2>
+					<script type="text/javascript" src="https://form.jotform.us/jsform/71403877184158"></script>
 			</div>
 
 			<div class="text-center footer">
