fixed header links

--- a/contact.html
+++ b/contact.html
@@ -57,9 +57,9 @@
 					<div id="navbar" class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 					        <img id="fighton" class="nav-fighton" src="img/usc.png">
-					            <li><a class="nav-items" href="#about">BIO</a></li>
-					            <li><a class="nav-items" href="#organizations">INVOLVEMENTS</a></li>
-					            <li><a class="nav-items" href="#projects">PROJECTS</a></li>
+					            <li><a class="nav-items" href="index.html#about">BIO</a></li>
+					            <li><a class="nav-items" href="index.html#organizations">INVOLVEMENTS</a></li>
+					            <li><a class="nav-items" href="index.html#projects">PROJECTS</a></li>
 					            <li><a id="contact-style" class="nav-items" href="contact.html#contact">CONTACT</a></li>
 					    </ul>
 					</div>
