--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 	    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<!-- Javascript / jQuery for Easter Egg -->
+		<script data-require="jquery@*" data-semver="2.2.0" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	    <script src="script.js"></script>
 	</head>
 
 	<body>
@@ -68,7 +72,9 @@
 
 				<div class="landing-text">
 					<div class="container text-center">
-						<h1>ocean ronquillo morgan</h1>
+						<h1>ocean </h1> 
+						<h1>ronquillo </h1>
+						<h1>morgan </h1>
 						<h3>entrepreneur, developer, trojan.</h3>
 
 						<ul class="social-icons list-unstyled list-inline"> 
@@ -79,23 +85,27 @@
 			
 			<div id="about" class="container text-center">
 				<div class="row">
-					<div class="myinfo col-lg-8 col-md-6 col-sm-6">
-						<div class="col-lg-8 col-md-6 col-sm-6">
-						<h1>Aloha!</h1>
+				  <div class="myinfo col-6 col-md-5">
+				  	<h1>Aloha!</h1>
+						<div class="section-title-border"></div>
 							<p>Ocean Ronquillo-Morgan is the name.</p>
 							<p>Born in Honolulu, Hawaii, I was raised on an island for most of my life. I moved to Charleston, South Carolina for a few years. Now, I live in sunny Los Angeles, California.</p>
 							<p>I currently attend the University of Southern California (2020) as a Computer Science and Business Administration major.</p>
 							<p>Please feel free to talk or message me with any inquiries or opportunities at oronquil@usc.edu!</p>
-							</div>
-						<h1>Skills</h1>
+				  </div>
+				  <div class="myinfo col-4 col-md-3">
+				  	<h1>Skills</h1>
+				  		<div class="section-title-border"></div>
 							<p><b>Languages:</b> Java, Python, HTML/CSS, Javascript</p>
 							<p><b>Frameworks:</b> Bootstrap, ReactJS</p>
 							<p><b>Applications:</b> Xcode</p>
 							<p><b>Business-Related:</b> Search Engine Optimization, Google Analytics</p>
-					</div>
-					<div class="col-lg-4 col-md-6 col-sm-6">
-							<img id="me-img" class="img-responsive" src="img/dinnerme.png">
-					</div>
+							<p><b>Miscellaneous:</b> Videography, Photography</p>
+				  </div>
+				  <div class="col-md-4">
+				  	<br></br>
+				  	<img id="me-img" class="img-responsive" src="img/dinnerme.png">
+				  </div>
 				</div>
 			</div>
 
