--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</div>
 			</nav>
 
-				<div class="landing-text">
+				<div class="landing-text text-center">
 					<div class="container text-center">
 						<h1>ocean </h1> 
 						<h1>ronquillo </h1>
