--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
 				</div>
 			</nav>
 
-				<div class="landing-text text-center">
+				<div class="name text-center">
 					<div class="container text-center">
-						<h1>ocean </h1> 
-						<h1>ronquillo </h1>
-						<h1>morgan </h1>
+						<h1>ocean ronquillo morgan</h1> 
 						<h3>entrepreneur, developer, trojan.</h3>
 
 						<ul class="social-icons list-unstyled list-inline"> 
