added bootstrap files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	    <!-- Bootstrap and CSS -->
 	    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	    <link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Javascript / jQuery for Easter Egg -->
