updated index.html, added assets folder, added resume

--- a/index.html
+++ b/index.html
@@ -33,13 +33,27 @@
 	    <link rel="icon" type="img/png" href="http://piq.codeus.net/static/media/userpics/piq_87354_400x400.png">
 
 	    <!-- Bootstrap and CSS -->
-	    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	    <link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	    <link rel="stylesheet" type="text/css" href="./assets/css/stylesheet.css">
+	    <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
+	    <link rel="stylesheet" type="text/css" href="./assets/css/normalize.css">
+	    <link rel="stylesheet" type="text/css" href="./assets/css/animate.min.css">
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Javascript / jQuery for Easter Egg -->
 		<script data-require="jquery@*" data-semver="2.2.0" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	    <script src="script.js"></script>
+	    <script src="./assets/js/script.js"></script>
+
+	    <!-- Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-100363982-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</head>
 
 	<body>
@@ -60,10 +74,10 @@
 
 					<div id="navbar" class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
-					        <img id="fighton" class="nav-fighton" src="img/fighton.png">
+					        <img id="fighton" class="nav-fighton" src="./assets/img/fighton.png">
 					            <li><a class="nav-items" href="#about">BIO</a></li>
-					            <li><a class="nav-items" href="#organizations">INVOLVEMENTS</a></li>
 					            <li><a class="nav-items" href="#projects">PROJECTS</a></li>
+					            <li><a class="nav-items" href="#organizations">INVOLVEMENTS</a></li>
 					            <li><a id="contact-style" class="nav-items" href="#contact">CONTACT</a></li>
 					    </ul>
 					</div>
@@ -76,7 +90,7 @@
 						<h3>entrepreneur, developer, trojan.</h3>
 
 						<ul class="social-icons list-unstyled list-inline"> 
-							<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li><li><a href="https://github.com/OceanRonquilloMorgan/" target="_blank" class="icon"><i class="fa fa-github-square" style="font-size:36px"></i></a></li><li><a href="https://www.facebook.com/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-facebook-square" style="font-size:36px"></i></a></li><li><a href='mailto:oronquil@usc.edu' class="icon"><i class="fa fa-wpforms" style="font-size:36px"></i></a></li></ul>
+							<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li><li><a href="https://github.com/OceanRonquilloMorgan/" target="_blank" class="icon"><i class="fa fa-github-square" style="font-size:36px"></i></a></li><li><a href="https://www.facebook.com/oceanronquillomorgan/" target="_blank" class="icon"><i class="fa fa-facebook-square" style="font-size:36px"></i></a></li><li><a href='./Ocean_Ronquillo_Morgan_Resume.pdf' target='_blank' class="icon"><i class="fa fa-wpforms" style="font-size:36px"></i></a></li></ul>
 					</div>
 				</div>
 			</div>
@@ -89,20 +103,20 @@
 							<p>Ocean Ronquillo-Morgan is the name.</p>
 							<p>Born in Honolulu, Hawaii, I was raised on an island for most of my life. I moved to Charleston, South Carolina for a few years. Now, I live in sunny Los Angeles, California.</p>
 							<p>I currently attend the University of Southern California (2020) as a Computer Science and Business Administration major.</p>
-							<p>Please feel free to talk or message me with any inquiries or opportunities at oronquil@usc.edu!</p>
+							<p>Please feel free to talk or message me with any inquiries or opportunities at <a href='mailto:oronquil@usc.edu' target='_blank'>oronquil@usc.edu!</a></p>
 				  </div>
 				  <div class="myinfo col-4 col-md-3">
 				  	<h1>Skills</h1>
 				  		<div class="section-title-border"></div>
 							<p><b>Languages:</b> Java, Python, HTML/CSS, Javascript</p>
-							<p><b>Frameworks:</b> Bootstrap, ReactJS</p>
+							<p><b>Frameworks:</b> Bootstrap, Node.js, React.js, Redux</p>
 							<p><b>Applications:</b> Xcode</p>
 							<p><b>Business-Related:</b> Search Engine Optimization, Google Analytics</p>
 							<p><b>Miscellaneous:</b> Videography, Photography</p>
 				  </div>
 				  <div class="col-md-4">
 				  	<br></br>
-				  	<img id="me-img" class="img-responsive" src="img/dinnerme.png">
+				  	<img id="me-img" class="img-responsive" src="./assets/img/dinnerme.png">
 				  </div>
 				</div>
 			</div>
@@ -118,34 +132,34 @@
 				<h2>community service</h2>
 					<div class ="row outer-organizations">
 						<div class="border col-lg-6">
-							<img class="club-images" src="img/tfla.jpg">
+							<img class="club-images" src="./assets/img/tfla.jpg">
 							<h3 class="text-uppercase"><b><a style="color:#333333;" href="http://teachforla.wixsite.com/teachforlausc" target="_blank">teach for los angeles</a></b></h3>
 							<h4>tutor</h4>
 							<p>I served as a writing and reading tutor for underserved students within the Los Angeles County school district, the nation’s second largest school district, which serves almost 700,000 students and the most diverse student populations.</p>
 						</div>
 						<div class="border col-lg-6">
-							<img class="club-images" src="img/jep.jpg">
+							<img class="club-images" src="./assets/img/jep.jpg">
 							<h3 class="text-uppercase"><b><a style="color:#333333;" href="https://dornsife.usc.edu/joint-educational-project" target="_blank">joint educational project</a></b></h3>
 							<h4>instructor</h4>
-							<p>I developed a comprehensive classroom curriculum with a group of two others and formed close-knit bonds with kindergarten students at a local elementary school to foster mindfulness and yoga practices to cultivate positivity, self-love, and healthy habits for their futures.</p>
+							<p>I developed a comprehensive classroom curriculum with a group of two others and formed close-knit bonds with kindergarten students at a local elementary school to foster mindfulness and yoga practices to cultivate stress reduction and establish positivity, compassion, and healthy habits for their futures.</p>
 						</div>
 					</div>
 					<br><h2>computer science</h2></br>
 					<div class="row outer-organizations">
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<img class="club-images" src="img/scope.jpeg">
+							<img class="club-images" src="./assets/img/scope.jpeg">
 							<h3 class="text-uppercase"><b><a style="color:#333333;" href="http://scopeusc.com" target="_blank">scope usc</a></b></h3>
 							<h4>student developer</h4>
 							<p>Scope guides a select number of students to improve their coding skills, build exciting projects, and bolster resumes through excellent curriculum, networking opportunities and more. In the spring semester of 2017, we learned React.js and built a variety of projects using this Javascript framework in small development teams.</p>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<img class="club-images" src="img/acm.jpg" height="175">
+							<img class="club-images" src="./assets/img/acm.jpg" height="175">
 							<h3 class="text-uppercase"><b><a style="color:#333333;" href="http://uscacm.org" target="_blank">acm usc</a></b></h3>
 							<h4>member</h4>
 							<p>USC's premier computer science organization, dedicated to bringing industry networking, hackathons, workshops, mentorship, and a community.</p>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<img class="club-images" src="img/swe.png">
+							<img class="club-images" src="./assets/img/swe.png">
 							<h3 class="text-uppercase"><b><a style="color:#333333;" href="http://www.sweusc.com" target="_blank">society of women engineers</a></b></h3>
 							<h4>member</h4>
 							<p>USC's chapter aims to provide female engineers with a supportive community and a greater voice in the engineering industry.</p>
@@ -163,7 +177,7 @@
 			<div id="projects">
 				<div class="container text-center">
 					<h2>projects</h2>
-					<img class="project-fill" src="img/projectfill.jpg">
+					<img class="project-fill" src="./assets/img/projectfill.jpg">
 					<br><br><br><h2>coming soon...</h2></br></br></br>
 				</div>
 			</div>
@@ -207,7 +221,8 @@
 							</li>
 
 							<li>
-								<a href='mailto:oronquil@usc.edu' class="icon">
+							<li>
+								<a href='./Ocean_Ronquillo_Morgan_Resume.pdf' target='_blank' class="icon">
 									<i class="fa fa-wpforms" style="font-size:36px"></i>
 								</a>
 							</li>
@@ -218,17 +233,4 @@
 			</div>
 		</div>
 	</body>
-
-	<!-- Google Analytics -->
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-100363982-1', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
-	
 </html>
