using online bootstrap css and bootstrap js

--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
 	    <!-- Website Icon -->
 	    <link rel="icon" type="img/png" href="http://piq.codeus.net/static/media/userpics/piq_87354_400x400.png">
 
-	    <!-- Bootstrap and CSS -->
+	    <!-- CSS -->
 	    <link rel="stylesheet" type="text/css" href="./assets/css/stylesheet.css">
-	    <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
 	    <link rel="stylesheet" type="text/css" href="./assets/css/normalize.css">
 	    <link rel="stylesheet" type="text/css" href="./assets/css/animate.min.css">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-		<!-- Javascript / jQuery for Easter Egg -->
+	    <!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!-- Bootstrap Modal JS -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+		<!-- jQuery for Easter Egg -->
 		<script data-require="jquery@*" data-semver="2.2.0" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	    <script src="./assets/js/script.js"></script>
 
@@ -52,7 +56,6 @@
 
 		  ga('create', 'UA-100363982-1', 'auto');
 		  ga('send', 'pageview');
-
 		</script>
 	</head>
 
