fixed footer formatting

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
         \__(__|
         ~Fight On!
 
-	Heyo! Welcome to my first attempt at making a personal website from scratch.
-	In the near future, I plan on reworking the code and adding a USC-related easter egg (see the SC logo in the top left corner?) to spice things up a bit. 
-	For now, enjoy the vanilla, and check out future projects on my Github:
+	Heyo! Welcome to my portfolio and my first attempt at making a personal website from scratch.
+	Check out future projects on my Github:
 
 	github.com/OceanRonquilloMorgan
  -->
@@ -106,7 +105,7 @@
 							<p>Ocean Ronquillo-Morgan is the name.</p>
 							<p>Born in Honolulu, Hawaii, I was raised on an island for most of my life. I moved to Charleston, South Carolina for a few years. Now, I live in sunny Los Angeles, California.</p>
 							<p>I currently attend the University of Southern California (2020) as a Computer Science and Business Administration major.</p>
-							<p>Please feel free to talk or message me with any inquiries or opportunities at <a href='mailto:oronquil@usc.edu' target='_blank'>oronquil@usc.edu!</a></p>
+							<p>Please feel free to talk or message me with any inquiries or opportunities at <a style="color:gray;" href='mailto:oronquil@usc.edu'>oronquil@usc.edu!</a></p>
 				  </div>
 				  <div class="myinfo col-4 col-md-3">
 				  	<h1>Skills</h1>
@@ -223,7 +222,6 @@
 								</a>
 							</li>
 
-							<li>
 							<li>
 								<a href='./Ocean_Ronquillo_Morgan_Resume.pdf' target='_blank' class="icon">
 									<i class="fa fa-wpforms" style="font-size:36px"></i>
