updated languages (react native)

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 				  <div class="myinfo col-4 col-md-3">
 				  	<h1>Skills</h1>
 				  		<div class="section-title-border"></div>
-							<p><b>Languages:</b> C++, Java, Python, HTML/CSS, Javascript</p>
-							<p><b>Frameworks:</b> Bootstrap, Node.js, React.js, Redux</p>
+							<p><b>Languages:</b> C/C++, Java, Python, HTML/CSS, Javascript</p>
+							<p><b>Frameworks:</b> Bootstrap, Node.js, React.js, React Native, Redux</p>
 							<p><b>Applications:</b> Xcode</p>
 							<p><b>Business-Related:</b> Search Engine Optimization, Google Analytics</p>
 							<p><b>Miscellaneous:</b> Videography, Photography</p>
