updated index.html and README

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						</div>
 					</section>
 
-				<!-- Three / Spotlight -->
+				<!-- Three / Spotlight
 					<section id="three" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
@@ -143,6 +143,7 @@
 							</div>
 						</section>
 					</section>
+				-->
 
 				<!-- CTA / Contact -->
 					<section id="cta" class="wrapper style4">
