--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 								<p>I am always open to grab a cup of coffee, chat over the phone, or simply say hello!</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="http://oceanronquillomorgan.com/Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button fit special">Resume</a></li>
+								<li><a href="http://oceanronquillomorgan.github.io/Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button fit special">Resume</a></li>
 								<li><a href="mailto:oronquil@usc.edu" class="button fit">Email Me</a></li>
 							</ul>
 						</div>
