Added Haleiwa Town Project

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 											<li><a href="#one">Who I Am</a></li>
 											<li><a href="#two">What I Do</a></li>
 											<li><a href="#cta">Contact</a></li>
+											<li><a href="https://oceanronquillomorgan.github.io/haleiwa-town/">Haleiwa Town Project</a></li>
 											<li><a href="/archive/index.html">Archived Website</a></li>
 										</ul>
 									</div>
