Removed projects.html and added a resume download button on landing

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							Cinematographer</a>.</p>
 						</div>
 						<ul class="actions">
-							<li><a href="projects.html" class="button special">Projects</a></li>
+							<li><a href="http://oceanronquillomorgan.github.io/Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button special">Resume</a></li>
 						</ul>
 						<a href="#one" class="more scrolly"></a>
 					</section>
@@ -84,9 +84,11 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Who I Am</h2>
-								<p>Computer Science and Business Administration (Class of 2020) undergraduate at the <b>University of Southern California.</b><br />
-								Born in Honolulu, HI, I was raised on an island for most of my life. I moved to Charleston, SC for a few years.
-								Now, I live in sunny <b>Los Angeles, CA.</b></p>
+								<p>Rising junior and Computer Science and Business Administration (Class of 2020) undergraduate at the
+									<b>University of Southern California.</b> Born in Honolulu, HI, I was raised on an island for most
+									of my life. I moved to Charleston, SC for a few years. Now, I live in sunny <b>Los Angeles, CA.</b></p>
+									<p>I am actively exploring the fields of full-stack web development, digital marketing, and web technologies
+										and applications.</p>
 							</header>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -154,7 +156,7 @@
 								<p>I am always open to grab a cup of coffee, chat over the phone, or simply say hello!</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="http://oceanronquillomorgan.github.io/Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button fit special">Resume</a></li>
+								<li><a href="http://oceanronquillomorgan.github.io/Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button special fit icon fa-download">Resume</a></li>
 								<li><a href="mailto:oronquil@usc.edu" class="button fit">Email Me</a></li>
 							</ul>
 						</div>
