--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <!--
 	   _    (^)
       (_\   |_|
@@ -12,177 +11,71 @@
 	Heyo! Welcome to my personal website and portfolio.
 	Check out my projects on my Github:
 	github.com/OceanRonquilloMorgan
-
-	Front-End Design Credits:
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Ocean Ronquillo-Morgan</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<meta name="description" content="Ocean Ronquillo-Morgan. Developer, Entrepreneur, Trojan. USC Computer Science / Business Administration 2020."/>
-	  <meta name="keyword" content= "Ocean Ronquillo-Morgan, Ronquillo-Morgan, Ocean, HTML, CSS, Java, Python, Bootstrap, Web Development"/>
-	  <meta property='og:title' content="Ocean Ronquillo-Morgan. USC Computer Science / Business Administration 2020.">
-	  <meta property="og:description" content="Developer, Entrepreneur, Trojan. USC Computer Science / Business Administration 2020."/>
-	  <meta property='og:url' content="http://oceanronquillomorgan.com">
-		<!-- Website Icon -->
-	  <link rel="icon" type="img/png" href="http://piq.codeus.net/static/media/userpics/piq_87354_400x400.png" />
-	</head>
-	<body class="landing">
+  <head>
+    <title>Ocean Ronquillo-Morgan | Software Developer, Entrepeneur, Trojan</title>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO Purposes -->
+    <meta name="description" content="Ocean Ronquillo-Morgan. Developer, Entrepreneur, Trojan. USC Computer Science / Business Administration 2020."/>
+  	<meta name="keywords" content= "Ocean Ronquillo-Morgan, Ronquillo-Morgan, Ocean, Full-Stack Development, Web Development, HTML, CSS, Java, Python, Bootstrap"/>
+    <meta property='og:title' content="Ocean Ronquillo-Morgan | Software Developer, Entrepeneur, Trojan">
+  	<meta property="og:description" content="Software Developer, Entrepreneur, Trojan. USC Computer Science and Business Administration 2020."/>
+  	<meta property='og:url' content="http://oceanronquillomorgan.github.io">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Ocean Ronquillo-Morgan | Fight On!</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="#one">Who I Am</a></li>
-											<li><a href="#two">What I Do</a></li>
-											<li><a href="#cta">Contact</a></li>
-											<li><a href="https://oceanronquillomorgan.github.io/haleiwa-town/">Haleiwa Town Project</a></li>
-											<li><a href="/archive/index.html">Archived Website</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+    <!-- Website Icon -->
+  	<link rel="icon" href="./assets/img/favicon.ico" type="img/png">
 
-				<!-- Banner -->
-					<section id="banner">
-						<video controls autoplay loop>
-							 <source src="images/waves.mp4" type="video/mp4">
-						 </video>
-						<div class="inner">
-							<h2>Ocean Ronquillo-Morgan</h2>
-							<p>Software Developer,<br />
-							Entrepreneur,<br />
-							Cinematographer</a>.</p>
-						</div>
-						<ul class="actions">
-							<li><a href="projects.html" class="button special">Projects</a></li>
-						</ul>
-						<a href="#one" class="more scrolly"></a>
-					</section>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://michalsnik.github.io/aos/dist/css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/stylesheet.css" type="text/css">
+    <link rel="stylesheet" href="https://bulma.io/css/bulma-docs.min.css?v=201807101351">
 
-				<!-- One / Who I Am -->
-					<section id="one" class="wrapper style5 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Who I Am</h2>
-								<p>Computer Science and Business Administration (Class of 2020) undergraduate at the <b>University of Southern California.</b><br />
-								Born in Honolulu, HI, I was raised on an island for most of my life. I moved to Charleston, SC for a few years.
-								Now, I live in sunny <b>Los Angeles, CA.</b></p>
-							</header>
-							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-								<li><a href="https://vimeo.com/oceanronquillomorgan" target="_blank" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-								<li><a href="https://www.instagram.com/ayeocean/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="mailto:oronquil@usc.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							</ul>
-						</div>
-					</section>
+    <!-- Bulma -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css" />
 
-				<!-- Two / What I Do -->
-					<section id="two" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>What I Do</h2>
-								<p>Inspired by the unique intersection of technology, business, and cinematography,<br />
-								I enjoy finding unique challenges to solve, innovative ways to disrupt these realms,<br/>
-								and crafting experiences through coding and the art of film and visualization.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-code">
-									<h3>Development</h3>
-									<p><b>Languages:</b> C/C++, Java, Python, HTML/CSS, Javascript<br />
-									<b>Frameworks:</b> Bootstrap, Node.js, Express.js, React.js, Redux, React Native, Vue.js</p>
-								</li>
-								<li class="icon fa-bar-chart">
-									<h3>Business</h3>
-									<p><b>Experience:</b> Launched and operated a limited liability corporation which generated over five million unique web hits and a social media and branding following.<br />
-									<b>Skills:</b> Search Engine Optimization (SEO), Digital Marketing, Google Analytics</p>
-								</li>
-								<li class="icon fa-camera">
-									<h3>Cinematography</h3>
-									<p><b>Software:</b> Final Cut Pro X, Adobe Photoshop, Adobe Lightroom, Sony Vegas Pro 12, Audacity<br />
-									<b>Equipment:</b> DJI Phantom 3 Standard Drone, Canon Rebel T6i DLSR, Rode Go Condenser Microphone, Blue Yeti Microphone, GoPro Hero 6</p>
-								</li>
-								<li class="icon fa-hand-peace-o">
-									<h3>Trojan</h3>
-									<p><b>Current Courses: </b>Data Structures and Object Oriented Design, Discrete Methods in Computer Science,
-									Linear Algebra and Linear Differential Equations, Web Publishing <br />
-									<!-- <b>Previous: </b>Introduction to Computer Science, Introduction to Programming (C++), Programming in Python,
-									Business Organizational Behavior and Leadership, Micronomics for Business,
-									Writing and Critical Reasoning - Technology & Social Change</p> -->
-								</li>
-							</ul>
-						</div>
-					</section>
+    <!-- Load AOS 'animate on scroll' -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Load Typed.js -->
+    <script type="text/javascript" src="https://rawgit.com/mattboldt/typed.js/v2.0.6/lib/typed.min.js"></script>
+  </head>
 
-				<!-- Three / Spotlight
-					<section id="three" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-					</section>
-				-->
+    <body>
+      <!-- Load Particles.js canvas -->
+      <div id="particles-js"></div>
 
-				<!-- CTA / Contact -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Contact Me!</h2>
-								<p>I am always open to grab a cup of coffee, chat over the phone, or simply say hello!</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="http://oceanronquillomorgan.github.io/Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button fit special">Resume</a></li>
-								<li><a href="mailto:oronquil@usc.edu" class="button fit">Email Me</a></li>
-							</ul>
-						</div>
-					</section>
+        <!-- Main Landing -->
+        <section class="hero">
+    			<div class="hero-center">
+    				<h1 data-aos="fade-up" data-aos-delay="400">Ocean 🌊</h1>
+            <h2 data-aos="fade-up" data-aos-delay="600">
+              <a class="button is-large is-danger bd-rainbow" href="https://oceanronquillomorgan.github.io/Ocean_Ronquillo_Morgan_Resume.pdf">
+              <span id="typed"></span>
+              </a>
+            </h2>
+          </div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/oceanronquillomorgan/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://vimeo.com/oceanronquillomorgan" target="_blank" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-							<li><a href="https://www.instagram.com/ayeocean/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="mailto:oronquil@usc.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; 2018 Ocean Ronquillo-Morgan</li>
-						</ul>
-					</footer>
+    			<span class="hero__scroll" data-aos="fade-up" data-aos-easing="ease" data-aos-delay="800">
+            Scroll Down
+            <a href="#about">
+              <i class="chevron bottom"></i>
+            </a>
+    			</span>
+		    </section>
 
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
+      <!-- Scripts -->
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+      <!-- Particles.js -->
+      <script type="text/javascript">particlesJS.load('particles-js', 'particles.json');</script>
+      <!-- Custom JS -->
+      <script src="./assets/js/index.js"></script>
+      <!-- Typed.js -->
+      <script type="text/javascript"> var options = {strings: ['^600 Developer, ^250 Creator, ^250 Trojan.'],typeSpeed: 40}; var typed = new Typed('#typed', options);</script>
+  </body>
 </html>
